Fixing password reset to use new task runner

--- a/configuration/templates/account/auth/reset-password.hbs
+++ b/configuration/templates/account/auth/reset-password.hbs
@@ -1,4 +1,4 @@
-<form id="reset-password-form" method="POST" class="container form authentication-form">
+<form id="reset-password-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="reset-password">
   <!-- <h2 class="x-padding">
     Reset password
   </h2> -->
@@ -6,8 +6,8 @@
     Enter your email address to be sent a password reset link
   </p>
   <div class="l-margin r-margin">
-    <div id="reset-password-message">
-      <span id="form-message"></span>
+    <div id="password-reset-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
+      <span class="alert-message"></span>
     </div>
   </div>
   <div class="x-padding">
@@ -22,32 +22,62 @@
         Send reset link
       </button>
     </div>
-    <div class="card-loader" id="reset-password-loader">
-      <div class="card-loader-inner">
-        <span class="far fa-2x fa-spinner-third fa-spin"></span>
-      </div>
-    </div>
   </div>
 </form>
-<script>
-document.addEventListener("DOMContentLoaded", function(event) {
-  var $form = $('#reset-password-form');
-  var $message = $('#reset-password-message');
-  var $email = $('#reset-password-email');
-  var $login = $('#reset-password-submit');
-  var $loader = $('#reset-password-loader');
 
-  $form.on('submit', function(evt) {
-    var email = $email.val();
-    $loader.css('display', 'flex');
-    evt.preventDefault();
-    saltireawards.auth.sendPasswordReset(email).then(function() {
-      $message.text('If there is an account associated with this email address, instructions on resetting your password have been sent there.').show();
-      $loader.css('display', 'none');
-    }).catch(function(err) {
-      $message.text(err.message).show();
-      $loader.css('display', 'none');
-    });
-  });
-});
+{{{{raw}}}}
+<script data-component-config="reset-password" type="javascript/blocked">
+{
+  submit: {
+    preventDefault: true,
+    tasks: [
+      {
+        type: "elementManipulator",
+        config: { ">": { addClass: "disabled" } }
+      },
+      {
+        name: "resetPassword",
+        type: "firebaseSendPasswordReset",
+        config: { email: { __template: "{{{jquery '#reset-password-email' 'val'}}}" } }
+      },
+      {
+        name: "responseSwitch",
+        type: "switch",
+        config: {
+          which: { __template: "{{#if errors.resetPassword}}error{{/if}}" },
+          branches: {
+            default: {
+              tasks: [
+                {
+                  type: "elementManipulator",
+                  config: {
+                    "#password-reset-alert": { removeClass: "hidden" },
+                    "#password-reset-alert .alert-message": { contents: "Password reset link set" }
+                  }
+                }
+              ]
+            },
+            error: {
+              __doNotCompile: true,
+              tasks: [
+                {
+                  type: "elementManipulator",
+                  config: {
+                    "#password-reset-alert": { removeClass: "hidden" },
+                    "#password-reset-alert .alert-message": { contents: { __pointer: "errors.resetPassword.message" } }
+                  }
+                }
+              ]
+            }
+          }
+        }
+      },
+      {
+        type: "elementManipulator",
+        config: { ">": { removeClass: "disabled" } }
+      }
+    ]
+  }
+}
 </script>
+{{{{/raw}}}}
