--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -3,7 +3,12 @@
     <div class="column col-9 col-xl-12">
       <h2>Details</h2>
 
-      <form id="user-details-form" action="/update-account-details" method="POST">
+      <form id="user-details-form" action="/update-account-details" method="POST" data-component="TasksTrigger" data-TasksTrigger='{
+    change: { tasks: [ "validate-details-form" ] },
+    keyup: { tasks: [ "validate-details-form" ] },
+    load: { tasks: [ "validate-details-form" ] },
+    submit: { tasks: [ "just-spin" ]}
+  }'>
         {{> account_details_form_fields admin=(compare @root.data.accountInfo.user_type 'Group Admin')}}
 
         {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
