--- a/configuration/templates/opportunity/search.hbs
+++ b/configuration/templates/opportunity/search.hbs
@@ -1,31 +1,20 @@
 <div class="container">
   {{> opportunity_search_form}}
   <div class="head">
-    <div class="columns col-gapless">
-      <div class="column col-4 action">
-        <ul class="tab tab-block">
-          <li class="tab-item{{#compare @root.request.url.pathname '/search'}} active{{/compare}}">
-            <a href="{{concat '/search' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
-              <span class="far fa-fw fa-list"></span>
-              List
-            </a>
-          </li>
-          <li class="tab-item{{#compare @root.request.url.pathname '/search/map'}} active{{/compare}}">
-            <a href="{{concat '/search/map' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
-              <span class="far fa-fw fa-map-marker-alt"></span>
-              Map
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="grid-content">
-    <div class="columns">
-      <div class="column col-9 col-sm-12">
-        {{> search_info paging=@root.data.search_data.detailed_results.pagination}}
-      </div>
-      <div class="column col-3 col-sm-12 action">
+    <ul class="tab">
+      <li class="tab-item{{#compare @root.request.url.pathname '/search'}} active{{/compare}}">
+        <a href="{{concat '/search' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
+          <span class="far fa-fw fa-list"></span>
+          List
+        </a>
+      </li>
+      <li class="tab-item{{#compare @root.request.url.pathname '/search/map'}} active{{/compare}}">
+        <a href="{{concat '/search/map' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
+          <span class="far fa-fw fa-map-marker-alt"></span>
+          Map
+        </a>
+      </li>
+      <li class="tab-item tab-action">
         {{#compare @root.data.search_data.detailed_results.hits.total ">" 0 ~}}
           <form action="{{{@root.request.url.path}}}" method="GET" class="form-horizontal">
             {{!-- {{#each (split "volunteersearch_types,activities,themes,services,age_groups" ",")}}
@@ -46,12 +35,12 @@
             {{/if}}
 
             <div class="form-group">
-              <div class="column col-6">
+              <div class="column col-ml-auto col-3 col-lg-4 col-md-6">
                 <label class="form-label pull-right r-margin" for="sort">
                   Sort by
                 </label>
               </div>
-              <div class="col-6">
+              <div class="col-3 col-lg-4 col-md-6">
                 <select class="form-select" id="sort" name="sort" onchange="this.form.submit();">
                   <option value="relevance" {{#unless @root.request.params.query.sort}} selected {{/unless}}>Relevance</option>
                   {{#if @root.request.params.query.location}}<option value="distance"{{#compare @root.request.params.query.sort "===" "distance"}} selected{{/compare}}{{#compare @root.request.params.query.exclude "===" "locations"}} disabled{{else}}{{#compare @root.request.params.query.location "===" ""}} disabled{{/compare}}{{/compare}}>Distance</option>{{/if}}
@@ -62,8 +51,12 @@
             </div>
           </form>
         {{/compare ~}}
-      </div>
-    </div>
+      </li>
+    </ul>
+  </div>
+
+  <div class="b-margin-full">
+    {{> search_info paging=@root.data.search_data.detailed_results.pagination}}
   </div>
 
   {{#if @root.request.params.query.debug_results}}
