--- a/configuration/templates/opportunity/map.hbs
+++ b/configuration/templates/opportunity/map.hbs
@@ -1,24 +1,20 @@
 <div class="container">
   {{> opportunity_search_form}}
   <div class="head">
-    <div class="columns col-gapless">
-      <div class="column col-4 action">
-        <ul class="tab tab-block">
-          <li class="tab-item{{#compare @root.request.url.pathname '/search'}} active{{/compare}}">
-            <a href="{{concat '/search' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
-              <span class="far fa-fw fa-list"></span>
-              List
-            </a>
-          </li>
-          <li class="tab-item{{#compare @root.request.url.pathname '/search/map'}} active{{/compare}}">
-            <a href="{{concat '/search/map' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
-              <span class="far fa-fw fa-map-marker-alt"></span>
-              Map
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <ul class="tab">
+      <li class="tab-item{{#compare @root.request.url.pathname '/search'}} active{{/compare}}">
+        <a href="{{concat '/search' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
+          <span class="far fa-fw fa-list"></span>
+          List
+        </a>
+      </li>
+      <li class="tab-item{{#compare @root.request.url.pathname '/search/map'}} active{{/compare}}">
+        <a href="{{concat '/search/map' (if (compare (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null exclude=null) '') '' else='?') (querystringify @root.request.params.query utm_source=null utm_campaign=null utm_medium=null)}}">
+          <span class="far fa-fw fa-map-marker-alt"></span>
+          Map
+        </a>
+      </li>
+    </ul>
   </div>
   {{#if @root.data.search_data.map_results.pagination.totalResults ~}}
   {{!--#ifAny (compare @root.data.search_data.map_results.aggregations.geo_search.buckets.[0].doc_count ">" 0) (compare @root.request.params.query.location "===" "") ~--}}
