--- a/src/main.scss
+++ b/src/main.scss
@@ -278,13 +278,9 @@ a.btn-link:hover {
 
 #activities-filters > span:first-child::before { content: "\f757"; }
 #themes-filters > span:first-child::before { content: "\f0c0"; }
-#age_groups-filters > span:first-child::before { content: "\f19c"; }
-#services-filters > span:first-child::before { content: "\f53c"; }
-#volunteersearch_types-filters > span:first-child::before { content: "\f0b0"; }
-#availability-filters > span:first-child::before { content: "\f3c5"; }
-#advertised_areas-filters > span:first-child::before { content: "\f4c4"; }
+#availability-filters > span:first-child::before { content: "\f017"; }
 
-.map-content {
+.leaflet-popup-content .map-content {
   h4 {
     font-size: 1rem;
   }
@@ -293,6 +289,18 @@ a.btn-link:hover {
   }
   .opportunity-link .btn-link {
     padding: $unit/2 0;
+  }
+}
+#map-full {
+  z-index: 10;
+}
+.chip-filters:not(:empty) {
+  margin-top: $unit/4;
+}
+.tab-action {
+  margin-bottom: -5px;
+  .form-horizontal {
+    padding: 0;
   }
 }
 
