--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -157,7 +157,7 @@
               Link to Facebook
             </button>
           {{/unless ~}}
-          {{/unless ~}}authRequired
+          {{/unless ~}}
         </div>
         {{/unless ~}}
 
