--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -30,17 +30,17 @@
             {{/if ~}}
           </div>
           <div class="card-body">
-            <ul class="fa-ul hours">
-              {{#if un_sustainable_development_goals ~}}
-              <li class="card-subtitle">
-                <span class="fa-li"><span class="far fa-globe"></span></span>
-                <span class="text-gray">{{> sdg_label sdg=un_sustainable_development_goals}}</span>
-              </li>
-              {{/if ~}}
+            <ul class="fa-ul hours-info">
               {{#if location ~}}
               <li class="card-subtitle">
                 <span class="fa-li"><span class="far fa-map-marker-alt"></span></span>
                 <span class="text-gray">{{truncate location 140}}</span>
+              </li>
+              {{/if ~}}
+              {{#if un_sustainable_development_goals ~}}
+              <li class="card-subtitle">
+                <span class="fa-li"><span class="far fa-globe"></span></span>
+                <span class="text-gray">{{> sdg_label sdg=un_sustainable_development_goals}}</span>
               </li>
               {{/if ~}}
               {{#compare hours ">" 0 ~}}
@@ -58,7 +58,7 @@
               {{/compare ~}}
               {{else}}
               <li class="card-subtitle">
-                <span class="fa-li"><span class="far fa-user"></span></span>
+                <span class="fa-li"><span class="far fa-user-times"></span></span>
                 <span class="text-gray">No hours added yet</span>
               </li>
               {{/compare ~}}
