improved message for last logged time

--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -70,14 +70,15 @@
               <label class="form-label" for="hours-{{task_id}}">
                 <strong>
                   {{#compare hours ">" 0 ~}}
-                  What have you done and how many hours have you volunteered since the last time you logged hours?
+                  What have you done and how many hours have you volunteered since the
+                  {{momentFormat (moment (itemAt (map hours_list (getProp "createdDate")) (subtract (length hours_list) 1)) 'YYYY-MM-DDTHH:mm:ssZ') "Do \o\f MMMM"}}?
                   {{else}}
                   What have you done and how many hours have you volunteered since you started?
                   {{/compare ~}}
                 </strong>
               </label>
               <div class="input-group b-margin">
-                <input class="form-input input-lg" id="notes-{{task_id}}" name="notes" type="text" placeholder="Add notes (optional)">
+                <input class="form-input input-lg" id="notes-{{task_id}}" name="notes" type="text" placeholder="Notes (optional)" />
               </div>
               <div class="input-group">
                 <input class="form-input input-lg" id="hours-{{task_id}}" name="hours" type="number" step="any" min="0.1" value="" placeholder="0" required >
