slightly breaking changes, you now need to have a user-id in order to change some hours, this will be code-checked if you're external

--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -173,6 +173,7 @@
           <input type="hidden" name="verified" value="{{verified}}">
           <input type="hidden" name="claim_code" value="{{claim_code}}">
           <input type="hidden" name="hours_id" value="{{hours_id}}">
+          <input type="hidden" name="user_id" value="{{@root.data.auth.uid}}">
 
           <div class="columns">
             <div class="column col-2 col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
