--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -36,6 +36,7 @@
                       <input type="hidden" name="verified" value="true">
                       <input type="hidden" name="claim_code" value="{{claim_code}}">
                       <input type="hidden" name="hours_id" value="{{hours_id}}">
+                      <input type="hidden" name="user_id" value="{{@root.request.params.query.u}}">
 
                       <div class="columns">
                         <div class="column col-1">
