--- a/src/main.scss
+++ b/src/main.scss
@@ -888,6 +888,14 @@ ul.fa-ul {
     margin-top: 0;
     margin-bottom: 0;
     cursor: default;
+    .popover-container {
+      ul.card-body {
+        padding-top: .6rem;
+        margin-top: 0;
+        margin-bottom: 0;
+        // list-style: disc outside !important;
+      }
+    }
   }
 }
 .contact.equal-height {
