potentially risky changes involving verifying hours - changed .u to .user_id for consistency's sake

--- a/configuration/templates/volunteering/apex-verify-hours-body.hbs
+++ b/configuration/templates/volunteering/apex-verify-hours-body.hbs
@@ -1,5 +1,5 @@
 {{#json}}
   {{{json key="datetime_to" value=@root.data.verifyHoursInfo.datetime_to}}},
   {{{json key="email" value=@root.request.params.query.e}}},
-  {{{json key="user_id" value=@root.request.params.query.u}}}
+  {{{json key="user_id" value=@root.request.params.query.user_id}}}
 {{/json}}
